Fix for black screen on mobile

--- a/src/app/news/game-news-list/game-news-list.component.css
+++ b/src/app/news/game-news-list/game-news-list.component.css
@@ -1,8 +1,3 @@
-:host {
-    background-color: #303030;
-    z-index: -15;
-}
-
 .title-container {
     margin-bottom: 60px;
 }
